# Proyecto-Ley-de-potencia-y-criticalidad-autoorganizada

./: PREGUNTAS.md  README.md  db.sqlite3  main.py  pyproject.toml
core/: settings.py  urls.py
simulationForest/: apps.py  engine.py  models.py  serializers.py  urls.py  views.py  weather.py
simulationForest/migrations/: 0001_initial.py
simulationForest/templates/: index.html
